left and right alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,11 @@ img {
 .showcase p {
     margin: 20px 0;
 }
+
+.showcase .grid {
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+}
  /* Utilities */
 .container{
     max-width: 1100px;
@@ -97,5 +102,9 @@ img {
 
 .grid{
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
